--- a/Firmware/platformio.ini
+++ b/Firmware/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	bblanchon/ArduinoJson@^6.20.0
+monitor_speed = 115200
